--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
         </div>
 
         <!-- IMAGE -->
-        <img src="people-removebg-preview.png"
+        <img src="ganti.png"
           class="w-full relative z-10 drop-shadow-xl" />
       </div>
     </div>
-
+</div>
   </div>
 </section>
 
